--- a/DesarrolloSocialNegocio/DesarrolloSocialNegocio.csproj
+++ b/DesarrolloSocialNegocio/DesarrolloSocialNegocio.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
