--- a/DesarrolloSocialWeb/appsettings.json
+++ b/DesarrolloSocialWeb/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*", 
+
+  "ConnectionStrings":  {
+    "DefaultConnection": "Data Source=sql5063.site4now.net;Initial Catalog=db_a7bdfb_facturacionemc;User Id=db_a7bdfb_facturacionemc_admin;Password=1234santiago",
+    "DefaultConnectionLocal": "Data Source=EMCSERVERASUS\\SQLEXPRESS;Initial Catalog=DesarrolloSocial;User Id=sa;Password=1234santiago"
+  }
 }
