--- a/DesarrolloSocialModelo/DesarrolloSocialModelo.csproj
+++ b/DesarrolloSocialModelo/DesarrolloSocialModelo.csproj
@@ -22,6 +22,8 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Repositories\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
