--- a/DesarrolloSocialNegocio/DesarrolloSocialNegocio.csproj
+++ b/DesarrolloSocialNegocio/DesarrolloSocialNegocio.csproj
@@ -22,6 +22,8 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
