--- a/DesarrolloSocialNegocio/DesarrolloSocialNegocio.csproj
+++ b/DesarrolloSocialNegocio/DesarrolloSocialNegocio.csproj
@@ -23,8 +23,10 @@
   <ItemGroup>
     <Folder Include="Interfaces\" />
     <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DesarrolloSocialModelo\DesarrolloSocialModelo.csproj" />
   </ItemGroup>
 
 </Project>
