--- a/DesarrolloSocialWeb/DesarrolloSocialWeb.csproj
+++ b/DesarrolloSocialWeb/DesarrolloSocialWeb.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DesarrolloSocialModelo\DesarrolloSocialModelo.csproj" />
+    <ProjectReference Include="..\DesarrolloSocialNegocio\DesarrolloSocialNegocio.csproj" />
   </ItemGroup>
 
 </Project>
