--- a/DesarrolloSocialWeb/appsettings.json
+++ b/DesarrolloSocialWeb/appsettings.json
@@ -5,10 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*", 
+  "AllowedHosts": "*",
 
-  "ConnectionStrings":  {
-    "DefaultConnection": "Data Source=sql5063.site4now.net;Initial Catalog=db_a7bdfb_facturacionemc;User Id=db_a7bdfb_facturacionemc_admin;Password=1234santiago",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=SQL8003.site4now.net;Initial Catalog=db_a9308e_desarrollo;User Id=db_a9308e_desarrollo_admin;Password=Bruss12345",
     "DefaultConnectionLocal": "Data Source=EMCSERVERASUS\\SQLEXPRESS;Initial Catalog=DesarrolloSocial;User Id=sa;Password=1234santiago"
   }
 }
